@@ -1,5 +1,9 @@
 2015-10-26  Simon Marchi  <simon.marchi@polymtl.ca>
 
+	* stap-probe.c (handle_stap_probe): Add (const char *) casts.
+
+2015-10-26  Simon Marchi  <simon.marchi@polymtl.ca>
+
 	* ctf.c (ctf_xfer_partial): Return TARGET_XFER_E_IO instead of
 	-1 on error.
 
